--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "less-loader": "^7.0.1",
+    "vant": "^2.10.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -25,6 +29,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
